--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <input type="text" id="input-el">
-        <button id="input-btn">SAVE INPUT</button>
-        <button id="tab-btn">SAVE TAB</button>
-        <button id="delete-btn">DELETE ALL</button>
-        <div id="columns-el">
-            <ul id="ul-el"></ul>
-        </div>
-        <script src="index.js"></script>
-    </body>
+
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <input type="text" id="input-el">
+  <button id="input-btn">SAVE INPUT</button>
+  <button id="tab-btn">SAVE TAB</button>
+  <button id="delete-btn">DELETE ALL</button>
+  <ul id="ul-el"></ul>
+  <script src="script.js"></script>
+</body>
+
 </html>
